force-app/main/default/objects/echosign_dev1__Library_Template__c/echosign_dev1__Library_Template__c.object-meta.xml
<CustomObject>
    <label>Library Template</label>
    <nameField>
        <label>Library Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>