force-app/main/default/objects/echosign_dev1__Library_Template__c/fields/echosign_dev1__Library_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Library_Template_Name__c</fullName>
    <description>Library template name can have up to 255 characters.</description>
    <inlineHelpText>Library template name can have up to 255 characters.</inlineHelpText>
    <label>Long Library Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>