force-app/main/default/objects/echosign_dev1__Library_Template__c/fields/echosign_dev1__Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Form Field Layer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>